--- a/page1/function.html
+++ b/page1/function.html
@@ -8,7 +8,7 @@
     
     <meta name="description" content="查阅知识">
     
-    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.aedda605.js" as="script"><link rel="preload" href="/assets/js/2.72be0d30.js" as="script"><link rel="preload" href="/assets/js/15.9685f86b.js" as="script"><link rel="prefetch" href="/assets/js/10.02d4d268.js"><link rel="prefetch" href="/assets/js/11.16d83efa.js"><link rel="prefetch" href="/assets/js/12.0eb48dc1.js"><link rel="prefetch" href="/assets/js/13.261a9d26.js"><link rel="prefetch" href="/assets/js/14.86d11c51.js"><link rel="prefetch" href="/assets/js/16.36c396b8.js"><link rel="prefetch" href="/assets/js/17.ad1128f1.js"><link rel="prefetch" href="/assets/js/18.975adf0a.js"><link rel="prefetch" href="/assets/js/19.3f742569.js"><link rel="prefetch" href="/assets/js/20.6ec44bc9.js"><link rel="prefetch" href="/assets/js/21.abc67976.js"><link rel="prefetch" href="/assets/js/22.746dec44.js"><link rel="prefetch" href="/assets/js/23.cd32f555.js"><link rel="prefetch" href="/assets/js/24.6b201780.js"><link rel="prefetch" href="/assets/js/25.cdb7a918.js"><link rel="prefetch" href="/assets/js/26.1271d2bc.js"><link rel="prefetch" href="/assets/js/27.135f46bd.js"><link rel="prefetch" href="/assets/js/28.5400f32d.js"><link rel="prefetch" href="/assets/js/29.0f7e3494.js"><link rel="prefetch" href="/assets/js/3.3e984bc1.js"><link rel="prefetch" href="/assets/js/4.69fc8ea0.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/7.f4adb7c6.js"><link rel="prefetch" href="/assets/js/8.d0b89722.js"><link rel="prefetch" href="/assets/js/9.84c074b2.js">
+    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.88d17d52.js" as="script"><link rel="preload" href="/assets/js/2.72be0d30.js" as="script"><link rel="preload" href="/assets/js/15.9685f86b.js" as="script"><link rel="prefetch" href="/assets/js/10.02d4d268.js"><link rel="prefetch" href="/assets/js/11.16d83efa.js"><link rel="prefetch" href="/assets/js/12.0eb48dc1.js"><link rel="prefetch" href="/assets/js/13.261a9d26.js"><link rel="prefetch" href="/assets/js/14.86d11c51.js"><link rel="prefetch" href="/assets/js/16.36c396b8.js"><link rel="prefetch" href="/assets/js/17.ad1128f1.js"><link rel="prefetch" href="/assets/js/18.975adf0a.js"><link rel="prefetch" href="/assets/js/19.3f742569.js"><link rel="prefetch" href="/assets/js/20.6ec44bc9.js"><link rel="prefetch" href="/assets/js/21.abc67976.js"><link rel="prefetch" href="/assets/js/22.746dec44.js"><link rel="prefetch" href="/assets/js/23.cd32f555.js"><link rel="prefetch" href="/assets/js/24.6b201780.js"><link rel="prefetch" href="/assets/js/25.cdb7a918.js"><link rel="prefetch" href="/assets/js/26.1271d2bc.js"><link rel="prefetch" href="/assets/js/27.135f46bd.js"><link rel="prefetch" href="/assets/js/28.4c772de5.js"><link rel="prefetch" href="/assets/js/29.3be848a1.js"><link rel="prefetch" href="/assets/js/3.3e984bc1.js"><link rel="prefetch" href="/assets/js/30.cbd15a7d.js"><link rel="prefetch" href="/assets/js/4.62bb542a.js"><link rel="prefetch" href="/assets/js/5.03a9bf61.js"><link rel="prefetch" href="/assets/js/6.a44b6161.js"><link rel="prefetch" href="/assets/js/7.f4adb7c6.js"><link rel="prefetch" href="/assets/js/8.d0b89722.js"><link rel="prefetch" href="/assets/js/9.84c074b2.js">
     <link rel="stylesheet" href="/assets/css/0.styles.692262fb.css">
   </head>
   <body>
@@ -72,7 +72,7 @@ on:{&quot;click&quot;:click1}},
 [_v(&quot;click1&quot;)]),_v(&quot; &quot;),
 _c('div',{attrs:{&quot;id&quot;:&quot;test2&quot;},
 on:{&quot;click&quot;:function($event){$event.stopPropagation();click2($event)}}}
-</code></pre></div></li> <li>虚拟dom --- &gt; 真实dom的时候。会调用核心函数 add$1() 通过addEventListener绑定相应事件</li></ol></div> <footer class="page-edit"><!----> <div class="last-updated"><span class="prefix">上次更新:</span> <span class="time">2021/6/2 21:18:17 周三</span></div></footer> <div class="page-nav"><p class="inner"><span class="prev">
+</code></pre></div></li> <li>虚拟dom --- &gt; 真实dom的时候。会调用核心函数 add$1() 通过addEventListener绑定相应事件</li></ol></div> <footer class="page-edit"><!----> <div class="last-updated"><span class="prefix">上次更新:</span> <span class="time">2021/6/3 11:1:29 周四</span></div></footer> <div class="page-nav"><p class="inner"><span class="prev">
       ←
       <a href="/page1/array.html" class="prev">
         数组取交集、并集与补集
@@ -81,6 +81,6 @@ on:{&quot;click&quot;:function($event){$event.stopPropagation();click2($event)}}
       </a>
       →
     </span></p></div> </main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.aedda605.js" defer></script><script src="/assets/js/2.72be0d30.js" defer></script><script src="/assets/js/15.9685f86b.js" defer></script>
+    <script src="/assets/js/app.88d17d52.js" defer></script><script src="/assets/js/2.72be0d30.js" defer></script><script src="/assets/js/15.9685f86b.js" defer></script>
   </body>
 </html>
