--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <meta name="description" content="查阅知识">
     
-    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.fc9477a0.js" as="script"><link rel="preload" href="/assets/js/2.78a99acc.js" as="script"><link rel="preload" href="/assets/js/3.ba2513a5.js" as="script"><link rel="prefetch" href="/assets/js/10.21f695e3.js"><link rel="prefetch" href="/assets/js/11.5e81ea0d.js"><link rel="prefetch" href="/assets/js/12.5632cae5.js"><link rel="prefetch" href="/assets/js/13.063ee473.js"><link rel="prefetch" href="/assets/js/14.c6ac892a.js"><link rel="prefetch" href="/assets/js/15.0d823916.js"><link rel="prefetch" href="/assets/js/16.7cb6d927.js"><link rel="prefetch" href="/assets/js/17.9cf23c5f.js"><link rel="prefetch" href="/assets/js/18.f34d5333.js"><link rel="prefetch" href="/assets/js/19.0f2dd444.js"><link rel="prefetch" href="/assets/js/20.28849ead.js"><link rel="prefetch" href="/assets/js/21.a81680e8.js"><link rel="prefetch" href="/assets/js/22.63f3f946.js"><link rel="prefetch" href="/assets/js/23.c65656cb.js"><link rel="prefetch" href="/assets/js/24.44efc28d.js"><link rel="prefetch" href="/assets/js/25.b0087fbe.js"><link rel="prefetch" href="/assets/js/26.12af0b94.js"><link rel="prefetch" href="/assets/js/27.21b23b7e.js"><link rel="prefetch" href="/assets/js/28.06c23d1d.js"><link rel="prefetch" href="/assets/js/29.a18c92e0.js"><link rel="prefetch" href="/assets/js/30.1034816d.js"><link rel="prefetch" href="/assets/js/31.eee8cec9.js"><link rel="prefetch" href="/assets/js/32.e8731b03.js"><link rel="prefetch" href="/assets/js/33.9dd68eea.js"><link rel="prefetch" href="/assets/js/4.ce56a636.js"><link rel="prefetch" href="/assets/js/5.b25cc780.js"><link rel="prefetch" href="/assets/js/6.856aea02.js"><link rel="prefetch" href="/assets/js/7.410a4d11.js"><link rel="prefetch" href="/assets/js/8.d6899534.js"><link rel="prefetch" href="/assets/js/9.f266716f.js">
+    <link rel="preload" href="/assets/css/0.styles.692262fb.css" as="style"><link rel="preload" href="/assets/js/app.9f8efd5e.js" as="script"><link rel="preload" href="/assets/js/2.78a99acc.js" as="script"><link rel="preload" href="/assets/js/3.ba2513a5.js" as="script"><link rel="prefetch" href="/assets/js/10.21f695e3.js"><link rel="prefetch" href="/assets/js/11.5e81ea0d.js"><link rel="prefetch" href="/assets/js/12.5632cae5.js"><link rel="prefetch" href="/assets/js/13.063ee473.js"><link rel="prefetch" href="/assets/js/14.c6ac892a.js"><link rel="prefetch" href="/assets/js/15.0d823916.js"><link rel="prefetch" href="/assets/js/16.7cb6d927.js"><link rel="prefetch" href="/assets/js/17.9cf23c5f.js"><link rel="prefetch" href="/assets/js/18.f34d5333.js"><link rel="prefetch" href="/assets/js/19.0f2dd444.js"><link rel="prefetch" href="/assets/js/20.28849ead.js"><link rel="prefetch" href="/assets/js/21.a81680e8.js"><link rel="prefetch" href="/assets/js/22.63f3f946.js"><link rel="prefetch" href="/assets/js/23.c65656cb.js"><link rel="prefetch" href="/assets/js/24.44efc28d.js"><link rel="prefetch" href="/assets/js/25.b0087fbe.js"><link rel="prefetch" href="/assets/js/26.12af0b94.js"><link rel="prefetch" href="/assets/js/27.21b23b7e.js"><link rel="prefetch" href="/assets/js/28.06c23d1d.js"><link rel="prefetch" href="/assets/js/29.a18c92e0.js"><link rel="prefetch" href="/assets/js/30.1034816d.js"><link rel="prefetch" href="/assets/js/31.eee8cec9.js"><link rel="prefetch" href="/assets/js/32.e8731b03.js"><link rel="prefetch" href="/assets/js/33.9dd68eea.js"><link rel="prefetch" href="/assets/js/4.ce56a636.js"><link rel="prefetch" href="/assets/js/5.b25cc780.js"><link rel="prefetch" href="/assets/js/6.856aea02.js"><link rel="prefetch" href="/assets/js/7.410a4d11.js"><link rel="prefetch" href="/assets/js/8.d6899534.js"><link rel="prefetch" href="/assets/js/9.f266716f.js">
     <link rel="stylesheet" href="/assets/css/0.styles.692262fb.css">
   </head>
   <body>
@@ -18,7 +18,7 @@
   项目积累
 </a></div><div class="nav-item"><a href="/page2/" class="nav-link">
   每日一题
-</a></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="前端技术" class="dropdown-title"><span class="title">前端技术</span> <span class="arrow down"></span></button> <button type="button" aria-label="前端技术" class="mobile-dropdown-title"><span class="title">前端技术</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/page3/" class="nav-link">
+</a></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="前端技术" class="dropdown-title"><span class="title">前端技术</span> <span class="arrow down"></span></button> <button type="button" aria-label="前端技术" class="mobile-dropdown-title"><span class="title">前端技术</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/page3/vue.html" class="nav-link">
   vue
 </a></li><li class="dropdown-item"><!----> <a href="/page3/" class="nav-link">
   qiankun
@@ -28,7 +28,7 @@
   项目积累
 </a></div><div class="nav-item"><a href="/page2/" class="nav-link">
   每日一题
-</a></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="前端技术" class="dropdown-title"><span class="title">前端技术</span> <span class="arrow down"></span></button> <button type="button" aria-label="前端技术" class="mobile-dropdown-title"><span class="title">前端技术</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/page3/" class="nav-link">
+</a></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="前端技术" class="dropdown-title"><span class="title">前端技术</span> <span class="arrow down"></span></button> <button type="button" aria-label="前端技术" class="mobile-dropdown-title"><span class="title">前端技术</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/page3/vue.html" class="nav-link">
   vue
 </a></li><li class="dropdown-item"><!----> <a href="/page3/" class="nav-link">
   qiankun
@@ -47,6 +47,6 @@
               </h2><h2><div class="circle"><span></span> <span></span> <span></span></div>
                 熟悉node.js，并可以运用接口服务 
               </h2></div></div></div></div></div></div> <!----></main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.fc9477a0.js" defer></script><script src="/assets/js/2.78a99acc.js" defer></script><script src="/assets/js/3.ba2513a5.js" defer></script>
+    <script src="/assets/js/app.9f8efd5e.js" defer></script><script src="/assets/js/2.78a99acc.js" defer></script><script src="/assets/js/3.ba2513a5.js" defer></script>
   </body>
 </html>
